# glue-small-multiples

./: CHANGES.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: release.yml
.github/workflows/: ci_workflows.yml  update-changelog.yaml
glue_small_multiples/: __init__.py  layer_artist.py  state.py  utils.py
glue_small_multiples/.github/workflows/: ci_workflows.yml
glue_small_multiples/qt/: layer_style_editor.py  options_widget.py  options_widget.ui  viewer.py
glue_small_multiples/qt/tests/: test_axes.py  test_data_viewer.py  test_save_restore.py
glue_small_multiples/qt/tests/data/: penguins.csv
