[metadata]
name = glue-small-multiples
url = https://www.gluesolutions.io
author = glue solutions, inc.
author_email = jfoster@gluesolutions.io
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = A viewer for small multiples
long_description = file: README.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    glue-core>=1.6

[options.entry_points]
glue.plugins =
    glue_small_multiples = glue_small_multiples:setup

[options.extras_require]
qt =
    PyQt5>=5.9
test =
    pytest

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
